moved header into react to stop flicker.

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Calibri;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -161,6 +159,32 @@ textarea {
   clear: both;
 }
 
+header, footer {
+  font-family: Calibri;
+  background-color: #5514b4;
+  color: #ffffff;
+  width: 100%;
+}
+
+header {
+  text-align: center;
+  height: 80px;
+  padding: 10px;
+  line-height: 1.5em;
+}
+
+footer {
+  min-height: 500px;
+}
+
+
+h1 {
+  font-size: 1.125rem;
+}
+
+.float-left {
+  float: left;
+}
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -252,4 +276,8 @@ textarea {
     page-break-after: avoid;
   }
 }
+
+
+
+
 
